<?xml version="1.0"?>
<package format="2">
  <name>followbot</name>
  <version>1.1.3</version>
  <description>Followbot package for the warehouse</description>
  <maintainer email="zhanteng.xie@temple.edu">Zhanteng Xie</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/TempleRAIL/followbot.git</url>
  <author email="zhanteng.xie@temple.edu">Zhanteng Xie</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/world"/>
  </export>
</package>
